--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl module IO::All::SecureFTP
+Revision history for Perl module IO::All::Securftp
 
 0.001
     - First version, released on an unsuspecting world.
